syntax = "proto3";

service FileService {
  rpc ListFiles (Empty) returns (FileList);
  rpc UploadFile (UploadRequest) returns (UploadResponse);
  rpc DownloadFile (DownloadRequest) returns (stream FileChunk);
}

message Empty {}

message FileList {
  repeated string files = 1;
}

message UploadRequest {
  string filename = 1;
  bytes content = 2;
}

message UploadResponse {
  string message = 1;
}

message DownloadRequest {
  string filename = 1;
}

message FileChunk {
  bytes content = 1;
}
